# bekku-agent

./: .env.example  .gitignore  PLAN.md  app.py  config.yaml  langgraph.json  pyproject.toml  requirements.txt  run_approve.py  run_scheduled.py  schedule.yaml  skill.md
.github/workflows/: approve.yml  generate.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
publications/: application-letter-final.md
skills/: competitive-landscape.md  content-performance.md  failure-log.md  job-description.md  larry-playbook.md  product-feedback.md  revenuecat-knowledge.md  technical-writing.md
src/: config.py  graph.py  state.py
src/nodes/: analyzer.py  planner.py  publisher.py  reporter.py  researcher.py  router.py  social.py  writer.py
src/prompts/: feedback_writer.md  interactive.md  planner.md  researcher.md  writer.md
src/tools/: buffer_tools.py  github_tools.py  rc_mcp_tools.py  skills.py  web_tools.py
